--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@angular/platform-browser": "~8.1.2",
     "@angular/platform-browser-dynamic": "~8.1.2",
     "@angular/router": "~8.1.2",
+    "@ionic-native/android-fingerprint-auth": "^5.16.0",
     "@ionic-native/core": "^5.0.0",
     "@ionic-native/facebook": "^5.16.0",
     "@ionic-native/splash-screen": "^5.0.0",
@@ -27,6 +28,7 @@
     "@ionic/angular": "^4.7.1",
     "@ionic/storage": "^2.2.0",
     "cordova-android": "^8.1.0",
+    "cordova-plugin-android-fingerprint-auth": "^1.5.0",
     "cordova-plugin-facebook4": "^6.2.0",
     "cordova-sqlite-storage": "^3.4.0",
     "core-js": "^2.5.4",
@@ -83,7 +85,8 @@
         "APP_NAME": "ProCoffee",
         "FACEBOOK_HYBRID_APP_EVENTS": "false",
         "FACEBOOK_ANDROID_SDK_VERSION": "5.5.2"
-      }
+      },
+      "cordova-plugin-android-fingerprint-auth": {}
     },
     "platforms": [
       "android"
