--- a/package.json
+++ b/package.json
@@ -23,16 +23,20 @@
     "@ionic-native/android-fingerprint-auth": "^5.16.0",
     "@ionic-native/core": "^5.0.0",
     "@ionic-native/facebook": "^5.16.0",
+    "@ionic-native/geolocation": "^5.16.0",
     "@ionic-native/splash-screen": "^5.0.0",
     "@ionic-native/status-bar": "^5.0.0",
     "@ionic/angular": "^4.7.1",
     "@ionic/storage": "^2.2.0",
+    "axios": "^0.19.0",
     "cordova-android": "^8.1.0",
     "cordova-plugin-android-fingerprint-auth": "^1.5.0",
     "cordova-plugin-facebook4": "^6.2.0",
+    "cordova-plugin-geolocation": "^4.0.2",
     "cordova-sqlite-storage": "^3.4.0",
     "core-js": "^2.5.4",
     "rxjs": "~6.5.1",
+    "rxjs-compat": "^6.5.3",
     "tslib": "^1.9.0",
     "zone.js": "~0.9.1"
   },
@@ -86,7 +90,8 @@
         "FACEBOOK_HYBRID_APP_EVENTS": "false",
         "FACEBOOK_ANDROID_SDK_VERSION": "5.5.2"
       },
-      "cordova-plugin-android-fingerprint-auth": {}
+      "cordova-plugin-android-fingerprint-auth": {},
+      "cordova-plugin-geolocation": {}
     },
     "platforms": [
       "android"
